<resources>
    <string name="app_name">Hotspot Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hotspot Manager</string>
    <string name="nav_header_subtitle">Manage your hotspot services</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    
    <!-- Navigation menu items -->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_routers">Routers</string>
    <string name="menu_packages">Packages</string>
    <string name="menu_vouchers">Vouchers</string>
    <string name="menu_settings">Settings</string>
    
    <!-- Auth -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="organization_name">Organization Name</string>
    <string name="business_type">Business Type</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="organization_email">Organization Email</string>
    
    <!-- Dashboard -->
    <string name="total_routers">Total Routers</string>
    <string name="active_routers">Active Routers</string>
    <string name="total_vouchers">Total Vouchers</string>
    <string name="active_vouchers">Active Vouchers</string>
    <string name="today_revenue">Today\'s Revenue</string>
    <string name="month_revenue">This Month\'s Revenue</string>
    
    <!-- Common -->
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="generate">Generate</string>
    <string name="test_connection">Test Connection</string>
</resources>
