<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_routers"
            android:icon="@drawable/ic_router"
            android:title="@string/menu_routers" />
        <item
            android:id="@+id/nav_packages"
            android:icon="@drawable/ic_package"
            android:title="@string/menu_packages" />
        <item
            android:id="@+id/nav_vouchers"
            android:icon="@drawable/ic_voucher"
            android:title="@string/menu_vouchers" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>

</menu>
